# template-repo-python

./: .codecov.yml  .gitignore  .mergify.yml  .pep8speaks.yml  .pre-commit-config.yaml  .pre-commit-config.yml  .pyrightconfig.json  .readthedocs.yml  .update.sh  .yapfignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/: BECOMING_A_CORE_CONTRIBUTOR.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  mergify.yml  stale.yml  teams.yml
.github/ISSUE_TEMPLATE/: bug_report.md  how-to-question.md  tutorial-example-request.md
.github/workflows/: autopep8.yml  code_formatting.yml  docker_builds.yml  docs_check_test_build.yml  greetings.yml  install_pkg.yml  notebook_tests_linux.yml  notebook_tests_mac.yml  notebook_tests_windows.yml  pr_labeler.yml  pypi_release.yml  rebase.yml  stale.yml  team_labeler.yml  unittests_linux.yml  unittests_mac.yml  unittests_windows.yml
REPONAME/: __init__.py  _version.py  setup_tools.py  test.py
dockers/: README.md
dockers/conda/: Dockerfile
docs/: build_docs.sh
docs/source/: api.rst  conf.py  configuring.rst  demo.rst  getting_started.rst  index.rst  installing.rst  lists_tables.rst  structure.rst
docs/source/_templates/: theme_variables.jinja
docs/source/_templates_stable/: layout.html  theme_variables.jinja
requirements/: docs.txt  extra.txt  notebooks.txt
scripts/: configure.py
tests/: test_helloworld.py
