[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.autopep8]
max_line_length = 79
ignore = ["W504", "E402", "E731", "C40", "E741", "F40", "F841"]

[tool.black]
# https://github.com/psf/black
line-length = 79
target-version = ["py38"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
known_first_party = [
    "examples",
    "pxd_torch",
    "tests",
    "scripts"
]
profile = "black"
line_length = 79
force_sort_within_sections = "False"
order_by_type = "False"
multi_line_output = 3
include_trailing_comma = "True"
