[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.autopep8]
max_line_length = 79
ignore = [
    "W504",
    "E402",
    "E731",
    "C40",
    "E741",
    "F40",
    "F841"
]

[tool.isort]
known_first_party = [
    "examples",
    "REPONAME",
    "tests",
    "scripts"
]
profile = "black"
line_length = 79
force_sort_within_sections = "False"
order_by_type = "False"
multi_line_output = 3
include_trailing_comma = "True"
